kubernetes/testing/streamripper-next/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: streamripper-next
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
