kubernetes/testing/streamripper-next/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamripper-next
  namespace: streamripper-next
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app.kubernetes.io/name: streamripper-next
    app.kubernetes.io/instance: streamripper-next
