kubernetes/testing/streamripper-next/ingressroute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamripper-next
  namespace: streamripper-next
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: "streamripper-files.local.biermann.uk"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: streamripper-next
            port:
              number: 80
